<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/screen_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_screen_background"
    tools:context="com.example.abhim.vehicle.MainActivity">

    <RelativeLayout
        android:id="@+id/heading_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="80dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="left"
            android:adjustViewBounds="true"
            android:src="@drawable/car_image" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:text="@string/name_of_person"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_marginStart="33dp"
            android:layout_toEndOf="@+id/textView"
            android:text="Small Text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignEnd="@+id/textView2"
            android:layout_alignParentTop="true"
            android:weightSum="1">

            <TextView
                android:id="@+id/vehicle_type_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="37dp"
                android:layout_marginTop="155dp"
                android:text="@string/vehicle_type_text"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/vehicle_type_spinner"
                style="@android:style/Widget.Spinner"
                android:layout_width="210dp"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="140dp"
                android:prompt="@string/vehicle_type_hint" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/pickUp_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="40dp"
                android:text="@string/pickupLocation"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/pickup_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="35dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/return_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:text="@string/returnLocation"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/return_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1">

            <TextView
                android:id="@+id/pickUp_time_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="60dp"
                android:text="@string/pick_up_time"
                android:textAppearance="?android:attr/textAppearanceMedium" />


            <TextView
                android:id="@+id/retun_time_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="60dp"
                android:text="@string/return_time"
                android:textAppearance="?android:attr/textAppearanceMedium" />


        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <Spinner
                android:id="@+id/pickup_spinner"
                style="@android:style/Widget.Spinner"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="113dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="230dp"
                android:prompt="@string/pick_up_type_hint"/>

            <Spinner
                android:id="@+id/retutn_spinner"
                style="@android:style/Widget.Spinner"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_alignStart="@+id/pickup_spinner"
                android:layout_alignTop="@+id/pickup_spinner"
                android:layout_marginLeft="230dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="178dp"
                android:prompt="@string/drop_off_type_hint"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/total_amount_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="30dp"
                android:text="@string/amount"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/total_amount_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
